[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/dialogue/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://ui/DialogueIndicator/DialogueIndicator.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

[node name="Dialogue" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="IndicatorAnchor" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 0 )

[node name="DialogueIndicator" parent="." instance=ExtResource( 2 )]
anchor_path = NodePath("../IndicatorAnchor")
[connection signal="body_entered" from="." to="." method="_on_Dialogue_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Dialogue_body_exited"]
